--- a/index.html
+++ b/index.html
@@ -354,6 +354,19 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe-footer">
+                <p class="subscribe">Subscribe</p>
+                <form class="subscribe-form">
+                    <label class="subscribe-email">
+                        <input class="subscribe-input" type="email" name="subscribe" placeholder="E-mail">
+                    </label>
+                    <button class="subscribe-button" type="submit">Subscribe
+                        <svg class="subscribe-icon" width="24" height="24">
+                            <use class="subscribe-wrap" href="./images/icons.svg#icon-tg"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <div class="modal-overlay is-open">
