--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <label class="user-agree" for="user-privacy">
                         <span class="agree-part">
                             <svg class="check-box-icon" width="10" height="8">
-                                <use href="./images/icons.svg#"></use>
+                                <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
                         
